--- a/vscode/Ac2/tasks.json
+++ b/vscode/Ac2/tasks.json
@@ -1,16 +1,16 @@
 {
-  // See https://go.microsoft.com/fwlink/?LinkId=733558
-  // for the documentation about the tasks.json format
   "version": "2.0.0",
   "tasks": [
     {
       "label": "CompileToMips",
       "type": "shell",
-      "command": "pcompile ${fileBasename}; hex2asm ${fileBasenameNoExtension}; ldpic32 ${fileBasenameNoExtension} -p \"/dev/ttyS4\"; rm *.hex;rm *.elf; rm *.map; rm *.o; pterm -p \"/dev/ttyS4\"",
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      }
+      "command": "pcompile ${relativeFile}; ldpic32 ${relativeFileDirname}/${fileBasenameNoExtension} -p \"/dev/ttyS4\"; rm ${relativeFileDirname}/*.hex;rm ${relativeFileDirname}/*.elf; rm *.map; rm ${relativeFileDirname}/*.o; pterm -p \"/dev/ttyS4\"",
+      
+    },
+    {
+      "label": "Send to PIC",
+      "type": "shell",
+      "command":"ldpic32 ${relativeFile} -p \"/dev/ttyS4\"; pterm -p \"/dev/ttyS4\""
     }
   ]
 }
