--- a/i3.d/i3/config
+++ b/i3.d/i3/config
@@ -201,3 +201,5 @@ exec --no-startup-id ~/.fehbg
 for_window [class="^.*"] border pixel 0
 gaps inner 20
 gaps outer 5
+exec xrandr --output HDMI1 --auto --above eDP1
+
