--- a/desktop_env/i3.d/i3/config
+++ b/desktop_env/i3.d/i3/config
@@ -173,6 +173,8 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+bindsym $mod+p exec fones && pacmd set-default-sink 1
+bindsym $mod+n exec pacmd set-default-sink 0
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -202,4 +204,4 @@ for_window [class="^.*"] border pixel 0
 gaps inner 20
 gaps outer 5
 exec xrandr --output HDMI1 --auto --above eDP1
-
+bindsym Print exec gscreenshot-cli -c
