--- a/desktop_env/i3.d/i3/config
+++ b/desktop_env/i3.d/i3/config
@@ -173,8 +173,8 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-bindsym $mod+p exec fones && pacmd set-default-sink 1
-bindsym $mod+n exec pacmd set-default-sink 0
+bindsym $mod+p exec fones && pacmd set-default-sink bluez_sink.E8_07_BF_30_FE_34.a2dp_sink && pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} bluez_sink.E8_07_BF_30_FE_34.a2dp_sink
+bindsym $mod+n exec  pacmd set-default-sink alsa_output.pci-0000_01_00.1.hdmi-stereo-extra1 && pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} alsa_output.pci-0000_01_00.1.hdmi-stereo-extra1
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -194,6 +194,7 @@ bar {
         status_command i3status-rs
 }
 default_border none
+exec setxkbmap pt
 exec --no-startup-id ~/.fehbg 
 for_window [class="^.*"] border pixel 0
 gaps inner 20
