--- a/desktop_env/i3.d/i3/config
+++ b/desktop_env/i3.d/i3/config
@@ -173,8 +173,22 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-bindsym $mod+p exec fones && pacmd set-default-sink bluez_sink.E8_07_BF_30_FE_34.a2dp_sink && pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} bluez_sink.E8_07_BF_30_FE_34.a2dp_sink
-bindsym $mod+n exec  pacmd set-default-sink alsa_output.pci-0000_01_00.1.hdmi-stereo-extra1 && pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} alsa_output.pci-0000_01_00.1.hdmi-stereo-extra1
+set $HEADPHONE_NAME_DESKTOP "bluez_sink.E8_07_BF_30_FE_34.a2dp_sink"
+set $MONITOR_NAME_DESKTOP "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra1"
+set $HEADPHONE_NAME_LAPTOP "bluez_sink.E8_07_BF_30_FE_34.a2dp_sink"
+set $MONITOR_NAME_LAPTOP "alsa_output.pci-0000_00_1f.3.analog-stereo"
+
+bindsym $mod+p exec fones && \
+    pacmd set-default-sink $HEADPHONE_NAME_DESKTOP && \
+    pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} $HEADPHONE_NAME_DESKTOP && \
+    pacmd set-default-sink $HEADPHONE_NAME_LAPTOP && \
+    pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} $HEADPHONE_NAME_LAPTOP 
+bindsym $mod+n exec pacmd set-default-sink $MONITOR_NAME_DESKTOP && \
+    pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} $MONITOR_NAME_DESKTOP && \
+    pacmd set-default-sink $MONITOR_NAME_LAPTOP && \
+    pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} $MONITOR_NAME_LAPTOP
+
+bindsym $mod+o exec echo $MONITOR_NAME_DESKTOP >> /tmp/a
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
