--- a/desktop_env/i3.d/i3/config
+++ b/desktop_env/i3.d/i3/config
@@ -178,7 +178,7 @@ set $MONITOR_NAME_DESKTOP "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra1"
 set $HEADPHONE_NAME_LAPTOP "bluez_sink.E8_07_BF_30_FE_34.a2dp_sink"
 set $MONITOR_NAME_LAPTOP "alsa_output.pci-0000_00_1f.3.analog-stereo"
 
-bindsym $mod+p exec fones && \
+bindsym $mod+p exec printf "power on\nconnect E8:07:BF:30:FE:34" | bluetoothctl && \
     pacmd set-default-sink $HEADPHONE_NAME_DESKTOP && \
     pacmd list-sink-inputs short | grep index | cut -d ":" -f2 | xargs -i pacmd move-sink-input {} $HEADPHONE_NAME_DESKTOP && \
     pacmd set-default-sink $HEADPHONE_NAME_LAPTOP && \
