--- a/desktop_env/i3.d/i3/config
+++ b/desktop_env/i3.d/i3/config
@@ -215,5 +215,6 @@ exec --no-startup-id ~/.fehbg
 for_window [class="^.*"] border pixel 0
 gaps inner 20
 gaps outer 5
-exec xrandr --output HDMI1 --auto --above eDP1
+exec xrandr --output HDMI-1 --auto --above eDP-1
+exec echo 19200 >  /sys/class/backlight/intel_backlight/brightness
 bindsym Print exec gscreenshot-cli -c
