--- a/desktop_env/i3.d/i3status-rust/config.toml
+++ b/desktop_env/i3.d/i3status-rust/config.toml
@@ -1,10 +1,5 @@
-
-[theme]
-name = "native"
-
-[icons]
-name = "awesome"
-
+theme = "semi-native"
+icons = "awesome"
 [[block]]
 block = "pacman"
 interval = 600
@@ -30,6 +25,7 @@ block = "memory"
 display_type = "memory"
 format_mem = "{Mup}%"
 format_swap = "{SUp}%"
+
 
 [[block]]
 block = "cpu"
