--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -18,8 +18,10 @@
     "READMEABDL",
     "Sena",
     "behaviour",
+    "denm",
     "machine",
     "pawngame",
+    "quadtree",
     "state"
   ],
   "[python]": {
@@ -44,7 +46,6 @@
     "*.bdl": "bdl",
     "*.shader": "glsl"
   },
-  "window.zoomLevel": 1,
   "workbench.iconTheme": "material-icon-theme",
   "liveServer.settings.donotShowInfoMsg": true,
   "[markdown]": {
@@ -56,6 +57,9 @@
   "editor.rulers": [
     90
   ],
+  "cmake.debugConfig": {
+    "args": ["11.11.11.11", "55555", "17"]
+  },
   "java.semanticHighlighting.enabled": true,
   "java.configuration.checkProjectSettingsExclusions": false,
   "explorer.confirmDelete": false,
@@ -68,4 +72,5 @@
 ],
 "python.languageServer": "Microsoft",
 "cmake.configureOnOpen": true,
+"angular.experimental-ivy": true,
 }
