--- a/desktop_env/i3.d/i3/config
+++ b/desktop_env/i3.d/i3/config
@@ -193,28 +193,16 @@ bindsym $mod+o exec echo $MONITOR_NAME_DESKTOP >> /tmp/a
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
-bar {
-	font pango: DejaVu Sans Mono, FontAwesome 16
-    	position bottom
-    	colors {
-        	separator #666666
-        	background #222222
-        	statusline #dddddd
-        	focused_workspace #0088CC #0088CC #ffffff
-        	active_workspace #333333 #333333 #ffffff
-        	inactive_workspace #333333 #333333 #888888
-        	urgent_workspace #2f343a #900000 #ffffff
-    	}	
-        status_command i3status-rs
-}
 default_border none
 
 exec setxkbmap pt
 default_border none
 exec --no-startup-id ~/.fehbg 
 for_window [class="^.*"] border pixel 0
-gaps inner 20
-gaps outer 5
+gaps inner 5
+gaps outer 2
 exec xrandr --output HDMI-1 --auto --above eDP-1
 exec echo 19200 >  /sys/class/backlight/intel_backlight/brightness
 bindsym Print exec gscreenshot-cli -c
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh --forest
+
