network manager applet added

--- a/desktop_env/i3.d/polybar/forest/config.ini
+++ b/desktop_env/i3.d/polybar/forest/config.ini
@@ -48,7 +48,7 @@ monitor-strict = false
 
 ; Tell the Window Manager not to configure the window.
 ; Use this to detach the bar if your WM is locking its size/position.
-override-redirect = false
+override-redirect = true
 
 ; Put the bar at the bottom of the screen
 bottom = true
@@ -138,9 +138,9 @@ font-2 = "feather:size=12;3"
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
-modules-left = sep volume sep cpu_bar sep memory_bar sep temperature sep brightness
+modules-left = volume sep cpu_bar sep memory_bar sep temperature 
 modules-center = i3
-modules-right = updates sep network sep date sep battery sep powermenu  sep
+modules-right = updates sep network sep date sep powermenu  
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -169,7 +169,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = none
+tray-position = left
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
