--- a/desktop_env/i3.d/polybar/forest/modules.ini
+++ b/desktop_env/i3.d/polybar/forest/modules.ini
@@ -491,7 +491,7 @@ type = internal/i3
 ; on different bars
 ;
 ; Default: false
-pin-workspaces = true
+;pin-workspaces = true
 
 ; This will split the workspace name on ':'
 ; Default: false
@@ -508,11 +508,11 @@ pin-workspaces = true
 
 ; Create scroll handlers used to cycle workspaces
 ; Default: true
-;;enable-scroll = false
+;enable-scroll = false
 
 ; Wrap around when reaching the first/last workspace
 ; Default: true
-;;wrapping-scroll = false
+wrapping-scroll = false
 
 ; Set the scroll cycle direction 
 ; Default: true
@@ -757,12 +757,12 @@ interface = enp3s0
 
 [module/wireless-network]
 type = internal/network
-interface = wlp2s0
+interface = wlo1
 
 ; Normal Module
 [module/network]
 type = internal/network
-interface = enp3s0
+interface = wlo1
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -918,7 +918,7 @@ thermal-zone = 0
 ; to find path to desired file
 ; Default reverts to thermal zone setting
 ;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
