--- a/desktop_env/i3.d/polybar/forest/config.ini
+++ b/desktop_env/i3.d/polybar/forest/config.ini
@@ -48,7 +48,7 @@ monitor-strict = false
 
 ; Tell the Window Manager not to configure the window.
 ; Use this to detach the bar if your WM is locking its size/position.
-override-redirect = true
+override-redirect = false
 
 ; Put the bar at the bottom of the screen
 bottom = true
@@ -138,9 +138,16 @@ font-2 = "feather:size=12;3"
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
-modules-left = volume sep cpu_bar sep memory_bar sep temperature 
+; zaheer
+; modules-left = volume sep cpu_bar sep memory_bar sep temperature 
+; modules-center = i3
+; modules-right = updates sep network sep date sep powermenu  
+
+; hornet
+modules-left = sep volume sep cpu_bar sep memory_bar sep temperature sep brightness
 modules-center = i3
-modules-right = updates sep network sep date sep powermenu  
+modules-right = updates sep network sep date sep battery sep powermenu  sep
+
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
