--- a/desktop_env/i3.d/polybar/forest/modules.ini
+++ b/desktop_env/i3.d/polybar/forest/modules.ini
@@ -918,7 +918,8 @@ thermal-zone = 0
 ; to find path to desired file
 ; Default reverts to thermal zone setting
 ;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
+;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input ; zaheer
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input ; hornet
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
