--- a/desktop_env/i3.d/i3/config
+++ b/desktop_env/i3.d/i3/config
@@ -13,6 +13,12 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
+#bar {
+#    height 34
+#    position bottom
+#    tray_output         none  # do not show tray output
+#    workspace_buttons   no    # do not show workspace buttons
+#}
 font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
